# avocado

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
docs/: TODO.md  guidelines.md  requirements.md  resources.md
docs/diagrams/: README.md  architecture.drawio
pymodules/market_data/: __init__.py  maths.py
source/: interface.cpp  interface.hpp  main.cpp  python.cpp  python.hpp
source/cli/: CMakeLists.txt  cli.cpp  cli.hpp
source/cmd/: CMakeLists.txt  command.cpp  command.hpp
source/data/: data.hpp
source/gui/: Application.cpp  Application.hpp  CMakeLists.txt  gui.cpp  gui.hpp
source/gui/Events/: Event.hpp  EventQueue.cpp  EventQueue.hpp  KeyboardEvent.cpp  KeyboardEvent.hpp
source/influx/: CMakeLists.txt  influx.cpp  influx.hpp
source/python/: CMakeLists.txt  python.cpp  python.hpp
source/repl/: CMakeLists.txt  repl.cpp  repl.hpp
test/: CMakeLists.txt  influx_test.cpp  test.cpp
vars/: README.md
